Add players API endpoints (#409)
