# app/models/club.rb
@@ -22,6 +22,14 @@ class Club < ApplicationRecord
     "#{Player::BUCKET_URL}/club_logo/#{path_name}.png"
   end
 
+  def kit_path
+    "#{Player::BUCKET_URL}/kits/club_small/#{path_name}.png"
+  end
+
+  def profile_kit_path
+    "#{Player::BUCKET_URL}/kits/club/#{path_name}.png"
+  end
+
   def path_name
     name.downcase.tr(' ', '_')
   end
