# swagger/v1/swagger.yaml
@@ -55,10 +55,10 @@ paths:
           properties:
             season_id:
               type: integer
-              example: '123'
+              example: 123
             tournament_id:
               type: integer
-              example: '123'
+              example: 123
       responses:
         '200':
           description: Success
@@ -93,6 +93,87 @@ paths:
                 properties:
                   data:
                     "$ref": "#/components/schemas/league"
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_not_found"
+  "/api/players":
+    get:
+      summary: list players
+      tags:
+      - Players
+      parameters:
+      - name: filter
+        in: query
+        type: object
+        required: false
+        schema:
+          type: object
+          properties:
+            club_id:
+              type: integer
+              example: 123
+            league_id:
+              type: integer
+              example: 123
+            name:
+              type: string
+              example: David
+            position:
+              type: string
+              example: RB
+            tournament_id:
+              type: integer
+              example: 123
+      - name: page
+        in: query
+        type: object
+        required: false
+        schema:
+          type: object
+          properties:
+            number:
+              type: integer
+              example: 1
+            size:
+              type: integer
+              example: 30
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      "$ref": "#/components/schemas/player_base"
+  "/api/players/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: Player id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: show player
+      tags:
+      - Players
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    "$ref": "#/components/schemas/player"
         '404':
           description: Not found
           content:
@@ -197,6 +278,45 @@ servers:
 - url: https://mantrafootball.org
 components:
   schemas:
+    club:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 123
+        code:
+          type: string
+          example: MIL
+        color:
+          type: string
+          example: DB0A23
+        kit_path:
+          type: string
+          example: https://aws.com/assets/path/kit.png
+        logo_path:
+          type: string
+          example: https://aws.com/assets/path/logo.png
+        name:
+          type: string
+          example: Milan
+        profile_kit_path:
+          type: string
+          example: https://aws.com/assets/path/kit.png
+        status:
+          type: string
+          example: active
+          description: 'Available values: active, archived'
+        tm_url:
+          type: string
+          example: https://www.transfermarkt.com/ac-mailand/startseite/verein/5
+          nullable: true
+        tournament_id:
+          type: integer
+          example: 321
+      required:
+      - id
+      - code
+      - name
     division:
       type: object
       properties:
@@ -346,6 +466,210 @@ components:
       required:
       - id
       - name
+    national_team:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 123
+        code:
+          type: string
+          example: it
+        color:
+          type: string
+          example: DB0A23
+        kit_path:
+          type: string
+          example: https://aws.com/assets/path/kit.png
+        name:
+          type: string
+          example: Italy
+        profile_kit_path:
+          type: string
+          example: https://aws.com/assets/path/kit.png
+        status:
+          type: string
+          example: active
+          description: 'Available values: active, archived'
+        tournament_id:
+          type: integer
+          example: 321
+      required:
+      - id
+      - code
+      - name
+    player:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 123
+        appearances:
+          type: integer
+          example: 123
+        avatar_path:
+          type: string
+          example: https://aws.com/assets/path/kit.png
+        average_base_score:
+          type: float
+          example: 7.65
+        average_price:
+          type: float
+          example: 33.3
+        average_total_score:
+          type: float
+          example: 7.89
+        club:
+          "$ref": "#/components/schemas/club"
+        first_name:
+          type: string
+          example: David
+          nullable: true
+        league_price:
+          type: integer
+          example: 25
+          nullable: true
+        league_team_logo:
+          type: string
+          example: https://aws.com/assets/path/team.png
+          nullable: true
+        name:
+          type: string
+          example: Beckham
+        position_classic_arr:
+          type: array
+          items:
+            type: string
+            example: RB
+          example:
+          - RB
+          - WB
+        position_ital_arr:
+          type: array
+          items:
+            type: string
+            example: Dd
+          example:
+          - Dd
+          - E
+        teams_count:
+          type: integer
+          example: 13
+        age:
+          type: integer
+          example: 33
+          nullable: true
+        birth_date:
+          type: string
+          example: Apr 17, 1996
+        country:
+          type: string
+          example: Italy
+          nullable: true
+        height:
+          type: integer
+          example: 189
+          nullable: true
+        leagues:
+          type: array
+          items:
+            type: integer
+            example: 44
+          example:
+          - 44
+          - 55
+        national_team:
+          "$ref": "#/components/schemas/national_team"
+          nullable: true
+        number:
+          type: integer
+          example: 189
+          nullable: true
+        profile_avatar_path:
+          type: string
+          example: https://aws.com/assets/path/kit.png
+        stats_price:
+          type: integer
+          example: 15
+        team_ids:
+          type: array
+          items:
+            type: integer
+            example: 444
+          example:
+          - 444
+          - 555
+        tm_price:
+          type: integer
+          example: 1000000
+          nullable: true
+        tm_url:
+          type: string
+          example: https://www.transfermarkt.com/profil/spieler/123
+          nullable: true
+      required:
+      - id
+      - name
+    player_base:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 123
+        appearances:
+          type: integer
+          example: 123
+        avatar_path:
+          type: string
+          example: https://aws.com/assets/path/kit.png
+        average_base_score:
+          type: float
+          example: 7.65
+        average_price:
+          type: float
+          example: 33.3
+        average_total_score:
+          type: float
+          example: 7.89
+        club:
+          "$ref": "#/components/schemas/club"
+        first_name:
+          type: string
+          example: David
+          nullable: true
+        league_price:
+          type: integer
+          example: 25
+          nullable: true
+        league_team_logo:
+          type: string
+          example: https://aws.com/assets/path/team.png
+          nullable: true
+        name:
+          type: string
+          example: Beckham
+        position_classic_arr:
+          type: array
+          items:
+            type: string
+            example: RB
+          example:
+          - RB
+          - WB
+        position_ital_arr:
+          type: array
+          items:
+            type: string
+            example: Dd
+          example:
+          - Dd
+          - E
+        teams_count:
+          type: integer
+          example: 13
+      required:
+      - id
+      - name
     result:
       type: object
       properties:
@@ -481,7 +805,7 @@ components:
           nullable: true
         logo_path:
           type: string
-          example: "/assets/path/team.png"
+          example: https://aws.com/assets/path/team.png
         players:
           type: array
           items:
